<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/toplnr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/spacing_large"
            app:cardCornerRadius="16dp">

            <com.google.android.material.checkbox.MaterialCheckBox

                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_gradient_soft"
                android:padding="@dimen/spacing_medium"
                android:text="@string/select_all"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/shape_circle" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient_soft"
                app:queryHint="@string/search" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toplnr">

        <include layout="@layout/generic_recyclerview" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/lyt_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_middle"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp"
                app:contentPadding="@dimen/spacing_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/export_pdf"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/colorPrimaryDark"
                app:fabSize="mini"
                app:rippleColor="@android:color/black"
                app:srcCompat="@drawable/pdf" />

            <View
                android:layout_width="@dimen/spacing_medium"
                android:layout_height="0dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lyt_csv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_middle"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp"
                app:contentPadding="@dimen/spacing_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/export_csv"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_csv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/colorPrimary"
                app:fabSize="mini"
                app:rippleColor="@android:color/black"
                app:srcCompat="@drawable/csv" />

            <View
                android:layout_width="@dimen/spacing_medium"
                android:layout_height="0dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_csv_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_middle"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp"
                app:contentPadding="@dimen/spacing_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/import_csv"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_csv_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/colorPrimary"
                app:fabSize="mini"
                app:rippleColor="@android:color/black"
                app:srcCompat="@drawable/ic_person" />

            <View
                android:layout_width="@dimen/spacing_medium"
                android:layout_height="0dp" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/spacing_large"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/white"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="normal"
            app:rippleColor="@android:color/white"
            app:srcCompat="@drawable/ic_apps" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>