<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="member"
            type="com.emrhmrc.addcontactlist.models.Member" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cyan_800_overlay" />

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <View
                android:layout_width="0dp"
                android:layout_height="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/welcome"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:fontFamily="sans-serif-light"
                android:text="@string/hope_you_enjoy_the_stay"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <View
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_middle"
                android:text="Log In"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText.White.Hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:focusable="true"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@{member.getEmail()}"
                    android:textColor="@color/grey_10"
                    android:theme="@style/EditText.White" />

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText.White.Hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:focusable="true"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@{member.getPassword()}"
                    android:textColor="@color/grey_10"
                    android:theme="@style/EditText.White" />

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mxlarge" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="login"
                    android:textStyle="bold"
                    android:tint="@color/cyan_800"
                    app:backgroundTint="@android:color/white"
                    app:fabSize="normal"
                    app:rippleColor="@color/cyan_800"
                    app:srcCompat="@drawable/ic_arrow_right" />


                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/sign_up_for_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btnGoogleSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

        </LinearLayout>

    </RelativeLayout>
</layout>